# V

./: .env.example  README.md  db_schema.sql  docker-compose.yml  pyproject.toml
src/app/: config.py  main.py
src/app/db/: models.py  session.py
src/app/handlers/: admin.py  user.py
src/app/keyboards/: common.py
src/app/middlewares/: services.py
src/app/payments/: plans.py
src/app/services/: panel_client.py  pricing.py  reminder.py  security.py
tests/: test_pricing.py
