[project]
name = "vpn-telegram-bot"
version = "0.1.0"
description = "Async Telegram bot for selling VLESS access via 3x-ui"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13.1",
  "SQLAlchemy>=2.0.35",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pydantic-settings>=2.5.2",
  "apscheduler>=3.10.4",
  "httpx>=0.27.2",
  "redis>=5.1.1",
  "cryptography>=43.0.1",
  "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.8",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

